crates/clan/clan-core/tests/snapshots/clan_golden__chains_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: GES
  Code  # Chains  Avg Length  Std Dev  Min  Max
  ----  --------  ----------  -------  ---  ---

Speaker: SPE
  Code  # Chains  Avg Length  Std Dev  Min  Max
  ----  --------  ----------  -------  ---  ---
