crates/clan/clan-core/tests/snapshots/clan_golden__check_target_child@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden.rs
assertion_line: 1244
expression: rust_output
---
*** File "reference/core/basic-conversation.cha": line 0.
PARTICIPANTS TIER IS MISSING "CHI Target_Child".(68)
