crates/clan/clan-core/tests/snapshots/clan_golden__chip_mor_gra@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
*CHI:	it's I want cookies .
%mor:	pron|it~aux|be&PRES pron|I verb|want noun|cookie-PL .
*MOT:	Mommy will get them .
%mor:	propn|Mommy aux|will verb|get&INF pron|them .
===========================================================
File: pipeout

Total  scored utterances: 0
Total  scored utterances: 0

Measure  	ADU	CHI	ASR	CSR
-----------------------------------------------------------
Responses	0	0	0	0
Overlap  	0	0	0	0
No_Overlap	0	0	0	0
%_Overlap	0.00	0.00	0.00	0.00
Avg_Dist	0.00	0.00	0.00	0.00
Rep_Index	0.00	0.00	0.00	0.00
ADD_OPS  	0	0	0	0
DEL_OPS  	0	0	0	0
EXA_OPS  	0	0	0	0
%_ADD_OPS	0.00	0.00	0.00	0.00
%_DEL_OPS	0.00	0.00	0.00	0.00
%_EXA_OPS	0.00	0.00	0.00	0.00
ADD_WORD	0	0	0	0
DEL_WORD	0	0	0	0
EXA_WORD	0	0	0	0
%_ADD_WORDS	0.00	0.00	0.00	0.00
%_DEL_WORDS	0.00	0.00	0.00	0.00
%_EXA_WORDS	0.00	0.00	0.00	0.00
MORPH_ADD	0	0	0	0
MORPH_DEL	0	0	0	0
MORPH_EXA	0	0	0	0
MORPH_SUB	0	0	0	0
%_MORPH_ADD	0.00	0.00	0.00	0.00
%_MORPH_DEL	0.00	0.00	0.00	0.00
%_MORPH_EXA	0.00	0.00	0.00	0.00
%_MORPH_SUB	0.00	0.00	0.00	0.00
AV_WORD_ADD	0.00	0.00	0.00	0.00
AV_WORD_DEL	0.00	0.00	0.00	0.00
AV_WORD_EXA	0.00	0.00	0.00	0.00
IMITAT   	0	0	0	0
%_IMITAT	0.00	0.00	0.00	0.00
EXACT    	0	0	0	0
EXPAN    	0	0	0	0
REDUC    	0	0	0	0
%_EXACT  	0.00	0.00	0.00	0.00
%_EXPAN  	0.00	0.00	0.00	0.00
%_REDUC  	0.00	0.00	0.00	0.00
