crates/clan/clan-core/tests/snapshots/clan_golden__chip_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Interaction profile
  Total interactions: 1
  Total exact repetitions: 0
  Total overlaps: 0
  Pair         Exact  Overlap  No overlap  Total  Exact %  Overlap %
  -----------  -----  -------  ----------  -----  -------  ---------
  CHI → MOT    0      0        1           1      0.0%     0.0%
