crates/clan/clan-core/tests/snapshots/clan_golden__codes_coding@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total codes: 2
  Count  Code
  -----  ----
  1      $ADJ
  1      $NOM
