crates/clan/clan-core/tests/snapshots/clan_golden__combo_and@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
----------------------------------------
*** File "pipeout": line 11.
*CHI:	it's I (1)want (2)cookies .

    Strings matched 2 times
