crates/clan/clan-core/tests/snapshots/clan_golden__combo_and@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Matches
  Matching utterances: 1
  Total utterances: 2
  File     Speaker  Utterance                  
  -------  -------  ---------------------------
  mor-gra  CHI      *CHI:	it's I want cookies .
