crates/clan/clan-core/tests/snapshots/clan_golden__combo_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
----------------------------------------
*** File "pipeout": line 8.
*SPE:	Triangle (1)kept (2)going .
----------------------------------------
*** File "pipeout": line 11.
*GES:	angle (1)kept (2)going .

    Strings matched 4 times
