crates/clan/clan-core/tests/snapshots/clan_golden__combo_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Matches
  Matching utterances: 2
  Total utterances: 5
  File              Speaker  Utterance                  
  ----------------  -------  ---------------------------
  eng-conversation  SPE      *SPE:	Triangle kept going .
  eng-conversation  GES      *GES:	angle kept going .
