crates/clan/clan-core/tests/snapshots/clan_golden__complexity_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Relation     Count   
  -----------  --------
  CSUBJ        0       
  CCOMP        0       
  XCOMP        0       
  ACL          0       
  ADVCL        0       
  NSUBJ        2       
  Tokens       2       
  TotalTokens  5       
  Ratio        0.400000

Speaker: MOT
  Relation     Count   
  -----------  --------
  CSUBJ        0       
  CCOMP        0       
  XCOMP        0       
  ACL          0       
  ADVCL        0       
  NSUBJ        0       
  Tokens       0       
  TotalTokens  4       
  Ratio        0.000000
